--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <title>Home</title>
 </head>
 <body>
+  <h3>Lista de alumnos</h3>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Alice</li>
+    <li>Valentine</li>
+    <li>Leon Scott</li>
   </ul>
 </body>
 </html>
