--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="src/css/main.css">
   <script type="text/javascript" src="src/js/index.js"></script>
+  <script type="text/javascript" src="src/js/home.js"></script>
   <title>Home</title>
 </head>
 <body>
