--- a/plantillas/header.html
+++ b/plantillas/header.html
@@ -1,3 +1,5 @@
 <link rel="stylesheet" href="../src/css/style.css">
-
+<link rel="stylesheet" href="../src/css/main.css">
+<script type="text/javascript" src="../src/js/index.js"></script>
+<script type="text/javascript" src="../src/js/home.js"></script>
 <h1>Header</h1>>
