fequevedot -  modificacion del inicio index.html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 </head>
 <body>
   <h3>Lista de alumnos</h3>
-  <ul>
-    <li>Alice</li>
-    <li>Valentine</li>
-    <li>Leon Scott</li>
-  </ul>
+  <div>
+    <ul>
+      <li>Alice</li>
+      <li>Valentine</li>
+      <li>Leon Scott</li>  
+    </ul>
+  </div>
+  <div>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas inventore eaque praesentium assumenda quasi laboriosam. Soluta dolorum nam aliquam accusantium, ipsa necessitatibus enim totam. Ea quaerat provident accusamus eos velit.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate saepe qui error, quidem et officiis! Adipisci exercitationem harum iste repudiandae delectus numquam expedita temporibus perspiciatis. Quibusdam debitis fugiat expedita possimus?
+    </p>
+  </div>
 </body>
 </html>
